--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,4 +2,5 @@
         <a class="link" href="/about.html">About</a>
         <a class="link" href="/contact.html">Contact</a>
         <a class="link" href="/">Home</a>
+        <a class="link" href="/project">Projects</a>
     </header>
