--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,12 @@
 <head>
-
-        <title>This is {{ page.title }} Page</title>
-        <link rel="stylesheet" href="/style.css">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>Bootstarp Tree</title>
+    
+        <!-- Bootstrap -->
+        <link href="vendor/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="vendor/bootstrap-tree/bootstrap-treeview.min.css" rel="stylesheet">
+        <link href="vendor/css/default.css" rel="stylesheet">
     </head>
